--- a/index.html
+++ b/index.html
@@ -7,25 +7,52 @@
      <meta name="viewport" content="width=device-width, initial-scale=1" />
  
      <!-- Bootstrap CSS -->
-     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <!-- Additional CSS must be placed after Bootstrap CSS -->
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
 <body>
 
-    <header>
-        <div>
-            <h1>NuCamp</h1>
-            <h2>a better way to camp</h2>
+    <header class="jumbotron">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>NuCamp</h1>
+                    <h2>a better way to camp</h2>
+                </div>
+            </div>
         </div>
     </header>
 
-    <div>
-        <h2>Discover & Review</h2>
-        <h3>Our Campsites</h3>
-        <p>Explore our growing database of curated campsites and leave your own reviews!</p>
-    </div>
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="nucampNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i>Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Sites</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 col-md-3">
+                <h2>Discover & Review</h2>
+                <div class="col">
+                    <h3>Our Campsites</h3>
+                    <p>Explore our growing database of curated campsites and leave your own reviews!</p>
+                </div>
+            </div>
+        </div>
     <div>
         <h2>Featured Campsites</h2>
         <h3>React Lake Campground</h3>
@@ -66,4 +93,4 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
-</html>
+</html> 
