--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 </head>
 
 <body>
-
     <header class="jumbotron">
         <div class="container">
             <div class="row">
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
+                 </div>
                 <div class="col">
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
@@ -30,6 +32,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
+            <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30" /></a>  
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -49,24 +52,49 @@
             <div class="col-sm-4 col-md-3">
                 <h2>Discover & Review</h2>
                 <div class="col">
-                    <h3>Our Campsites</h3>
-                    <p>Explore our growing database of curated campsites and leave your own reviews!</p>
+                    <div class="media">
+                        <img class="d-flex mr-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail" />
+                        <div class="media-body align-self-center">
+                            <h3>Our Campsites</h3>
+                            <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    <div>
-        <h2>Featured Campsites</h2>
-        <h3>React Lake Campground</h3>
-        <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
-    </div>
+        <div class="row">
+            <div class="col-md-3  align-self-center">
+                <h2>Featured Campsites</h2>
+            </div>
+            <div class="col-md-6  align-self-center">
+                <h3>React Lake Campground</h3>
+                <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+            </div>
+            <div class="col-md-3">
+                <img src="img/react-lake-thumb.jpg" class="ml-3 img-thumbnail d-flex">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail " src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters">
+                    <div class="media-body align-self-center">
+                        <h3>Bootstrap Outfitters</h3>
+                        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-sm-6 mx-auto">
+                <div class="card">
+                    <h3 class="header"></h3>
 
-    <div>
-        <h2>Our Community Partners</h2>
-        <h3>Bootstrap Outfitters</h3>
-        <p>Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <footer>
+    <footer class="site-footer">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-2 offset-1">
